[project]
name = "akidocs-core"
version = "0.2.0.dev0"
description = "Markdown to PDF converter"
requires-python = ">=3.14"
dependencies = [
    "fpdf2>=2.8.5",
]

[project.scripts]
aki = "akidocs_core.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
